# csg060-nrf51

./: CMakeLists.txt  Readme.md  toolchain-nrf.cmake
config/: CMakeLists.txt  sdk_config.h
dfu/: CMakeLists.txt  main.c  qemu_rtt.c  secure_dfu_gcc_nrf51.ld
dfu/config/: CMakeLists.txt  sdk_config.h
dfu/sdk/: CMakeLists.txt
dfu/vault/: keygen.bat  pk.c  private.pem
pca10028/blank/armgcc/: uart_gcc_nrf51.ld
sdk/: CMakeLists.txt  qemu_rtt.c
src/: CMakeLists.txt  ble_app.c  ble_app.h  dfu_mgmt.c  dfu_mgmt.h  dfu_mgmt_types.h  main.c  main.cpp  os_time.c  os_time.h
src/drivers/: app_uart_fifo.c  uart.c  uart.cpp  uart.h
